Exploit the Diamond Deposits

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -98,3 +98,6 @@ GER_finance_saarland_military_complex:0 "Finance the Saarland's Military Complex
 
 #Flags
 GER_ww1_state_munitions:0 "Investing in State Munitions"
+
+#Tooltips
+ww1_germanytooltip1:0 "If Belgium accepts our proposal we can expect the profit to benefit our economy as a whole"
